REIMPL checksum